fixing white gap on the right side

--- a/seeds_frontend/src/css/build.css
+++ b/seeds_frontend/src/css/build.css
@@ -9,15 +9,9 @@
     box-shadow: inset 0 0 5.5rem rgba(0, 142, 236, 0.712);
 }
 
-
-.container-fluid {
-    padding-right: 0px;
-    padding-left: 0px;
-}
-
 .col-5, .col-7 {
-    padding-right: 3px;
-    padding-left: 3px;
+    padding-right: 1px;
+    padding-left: 1px;
     padding-top: 15px;
 }
 
@@ -28,8 +22,14 @@
 
 .leftComponent {
     padding-left: 25px;
+    padding-right: 5px;
 }
 
 .rightComponent {
     padding-right: 25px;
+    padding-left: 5px;
+}
+
+#dontfloat {
+    max-width: 100vw;
 }
